# equicare

./: .env  README.md  index.html  package-lock.json  package.json  pyproject.toml  server.js
src/: App.jsx  index.css
src/lib/: supabase.js
src/pages/: AdminPage.jsx  DoctorDetailPage.jsx  Home.jsx  NotFound.jsx  ProfilePage.jsx  UserPage.jsx  supabase.js
